force-app/main/default/objects/Request__c/Request__c.object-meta.xml
<CustomObject>
    <description>-</description>
    <label>Request</label>
    <nameField>
        <displayFormat>RQ-{0000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>