force-app/main/default/objects/Request__c/listViews/AllFulfilled.listView-meta.xml
<ListView>
    <fullName>AllFulfilled</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Delivered</value>
    </filters>
    <label>All Fulfilled Requests</label>
</ListView>