force-app/main/default/objects/Request__c/listViews/AllUnfulfilled.listView-meta.xml
<ListView>
    <fullName>AllUnfulfilled</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Declined,Delivered</value>
    </filters>
    <label>All Unfulfilled Requests</label>
</ListView>